--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="3.jpg" alt="Chania" width="1200" height="279">
+        <img src="img/3.jpg" alt="Chania" width="1200" height="279">
       </div>
 
       <div class="item">
-        <img src="4.jpg" alt="Chania" width="1200" height="279">
+        <img src="img/4.jpg" alt="Chania" width="1200" height="279">
       </div>
     
       <div class="item">
-        <img src="3.jpg" alt="Flower" width="1200" height="279">
+        <img src="img/3.jpg" alt="Flower" width="1200" height="279">
       </div>
 
       <div class="item">
-        <img src="4.jpg" alt="Flower" width="1200" height="279">
+        <img src="img/4.jpg" alt="Flower" width="1200" height="279">
       </div>
     </div>
 
