--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <a class="navbar-brand" href="#">Cloud Photo Backup</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-      <li class="active"><a href="#">Home</a></li>    
-      <li><a href="#">Login</a></li>     
+      <li class="active"><a href="index.html">Home</a></li>    
+      <li><a href="login.html">Login</a></li>     
     </ul>
   </div>
 </nav>
